package com.pluralsight.controller;

import com.pluralsight.user.HomeScreen;

public class Program {
    public static void main(String[] args) {
        new HomeScreen();
    }
}
