package com.pluralsight.model;

public enum Toppings {
    LETTUCE,
    PEPPERS,
    ONIONS,
    TOMATOES,
    JALAPENO,
    CUCUMBERS,
    PICKLES,
    GUACAMOLE,
    MUSHROOM

}
