package com.pluralsight.model.enums;

public enum BreadType {
    WHITE,
    WHEAT,
    RYE,
    WRAP
}
